// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountList reducer should handle INVENTORY_ACCOUNT_STATUS_POLLING 1`] = `
Object {
  "error": null,
  "pollingProcessID": 0,
  "statuses": Object {
    "Account1": Object {
      "generate_report_status": "running",
      "upload_report_status": "running",
    },
    "Account2": Object {
      "generate_report_status": "failure",
      "upload_report_status": "unknown",
    },
    "Account3": Object {
      "generate_report_status": "running",
      "upload_report_status": "success",
    },
  },
}
`;

exports[`AccountList reducer should handle INVENTORY_ACCOUNT_STATUS_POLLING_ERROR 1`] = `
Object {
  "error": "some-error",
  "pollingProcessID": 0,
  "statuses": Object {},
}
`;

exports[`AccountList reducer should handle INVENTORY_ACCOUNT_STATUS_POLLING_START 1`] = `
Object {
  "error": null,
  "pollingProcessID": 0,
  "statuses": Object {},
}
`;

exports[`AccountList reducer should handle INVENTORY_ACCOUNT_STATUS_POLLING_STOP 1`] = `
Object {
  "error": null,
  "pollingProcessID": 0,
  "statuses": Object {},
}
`;

exports[`AccountList reducer should handle INVENTORY_PROCESS_RESTART 1`] = `
Object {
  "error": null,
  "pollingProcessID": 0,
  "statuses": Object {
    "user@redhat.com": Object {
      "upload_report_status": "Restarting...",
    },
  },
}
`;

exports[`AccountList reducer should return the initial state 1`] = `
Object {
  "error": null,
  "pollingProcessID": 0,
  "statuses": Object {},
}
`;
